lc opening,covernote generate,insurance policy,suppliers pi, po line,new po

--- a/application/templates/letter_template/application_eo_letter.html
+++ b/application/templates/letter_template/application_eo_letter.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<p style='font-size:10.0pt;mso-fareast-font-family:Telenor;line-height:120%;'><b>No. GP/RO/BTRC/APP/20XX-XX Dated XXX <o:p></o:p></b></p>
+<p style='font-size:10.0pt;mso-fareast-font-family:Telenor;line-height:120%;'><b> ##SL## <o:p></o:p></b></p>
 
             <p class=MsoNormal>
                 <span class=SpellE><span style='font-size:10.0pt; mso-fareast-font-family:Telenor'>The Chairman </span></span><br>
@@ -29,18 +29,8 @@
        <th style="width: 70%;border-collapse: collapse;border: 1px solid black;">Basic features</th>
    </thead>
     <tbody>
-    <tr style="border: 1px solid black;border-collapse: collapse;">
-        <td style="width: 30%;border-collapse: collapse;border: 1px solid black;">According to PI</td>
-        <td style="width: 70%;border-collapse: collapse;border: 1px solid black;">Summary Justification from justification file</td>
-    </tr>
-    <tr style="border: 1px solid black;border-collapse: collapse;">
-        <td style="width: 30%;border-collapse: collapse;border: 1px solid black;">According to PI</td>
-        <td style="width: 70%;border-collapse: collapse;border: 1px solid black;">Summary Justification from justification file</td>
-    </tr>
-    <tr style="border: 1px solid black;border-collapse: collapse;">
-        <td style="width: 30%;border-collapse: collapse;border: 1px solid black;">According to PI</td>
-        <td style="width: 70%;border-collapse: collapse;border: 1px solid black;">Summary Justification from justification file</td>
-    </tr>
+    ##tBody##
+
     </tbody>
 </table>
 <p style='font-size:10.0pt;mso-fareast-font-family:Telenor;text-align:justify;line-height:120%;'>The required equipment with accessories lists is enclosed herewith as annexure.  </p>
