--- a/application/templates/letter_template/application_spectrum_letter.html
+++ b/application/templates/letter_template/application_spectrum_letter.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<p style='font-size:10.0pt;mso-fareast-font-family:Telenor;line-height:120%;'><b>No. GP/RO/BTRC/APP/20XX-XX Dated XXX <o:p></o:p></b></p>
+<p style='font-size:10.0pt;mso-fareast-font-family:Telenor;line-height:120%;'><b> ##SL## <o:p></o:p></b></p>
 
 <p class=MsoNormal>
     <span class=SpellE><span style='font-size:10.0pt; mso-fareast-font-family:Telenor'>The Chairman </span></span><br>
