--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,6 +1,6 @@
 .site-navbar .navbar-header {
   color: #fff;
-  background-color: #ea6262;
+  background-color: red;
 }
 .site-navbar .navbar-header .navbar-toggle {
   color: #fff;
