--- a/application/templates/letter_template/equipment_list_description.html
+++ b/application/templates/letter_template/equipment_list_description.html
@@ -20,40 +20,12 @@
     <th style="width: 15%;border-collapse: collapse;border: 1px solid black;">Currency</th>
     </thead>
     <tbody>
-    <tr style="border: 1px solid black;border-collapse: collapse;">
-        <td style="width: 7%;border-collapse: collapse;border: 1px solid black;">1</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 22%;border-collapse: collapse;border: 1px solid black;">According to PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-    </tr>
-    <tr style="border: 1px solid black;border-collapse: collapse;">
-        <td style="width: 7%;border-collapse: collapse;border: 1px solid black;">1</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 22%;border-collapse: collapse;border: 1px solid black;">According to PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-    </tr>
-    <tr style="border: 1px solid black;border-collapse: collapse;">
-        <td style="width: 7%;border-collapse: collapse;border: 1px solid black;">1</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 22%;border-collapse: collapse;border: 1px solid black;">According to PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-        <td style="width: 15%;border-collapse: collapse;border: 1px solid black;">From PI</td>
-    </tr>
+    ##tBody##
+
     </tbody>
 </table>
 
-<div style="margin-top: 500px;">
+<div style="margin-top: 400px;">
     <span style='font-size:6.0pt;mso-fareast-font-family:Telenor;'>
      Sensitivity: Internal<br>
     </span>
