--- a/application/templates/letter_template/equipments_quantity.html
+++ b/application/templates/letter_template/equipments_quantity.html
@@ -13,22 +13,7 @@
     <th style="width: 35%;border-collapse: collapse;border: 1px solid black;">Qty</th>
     </thead>
     <tbody>
-    <tr style="border: 1px solid black;border-collapse: collapse;">
-        <td style="width: 10%;border-collapse: collapse;border: 1px solid black;">1</td>
-        <td style="width: 35%;border-collapse: collapse;border: 1px solid black;">From PI line Item</td>
-        <td style="width: 35%;border-collapse: collapse;border: 1px solid black;">From PI line Item</td>
-    </tr>
-    <tr style="border: 1px solid black;border-collapse: collapse;">
-        <td style="width: 7%;border-collapse: collapse;border: 1px solid black;">2</td>
-        <td style="width: 35%;border-collapse: collapse;border: 1px solid black;">From PI line Item</td>
-        <td style="width: 35%;border-collapse: collapse;border: 1px solid black;">From PI line Item</td>
-
-    </tr>
-    <tr style="border: 1px solid black;border-collapse: collapse;">
-        <td style="width: 10%;border-collapse: collapse;border: 1px solid black;">3</td>
-        <td style="width: 35%;border-collapse: collapse;border: 1px solid black;">From PI line Item</td>
-        <td style="width: 35%;border-collapse: collapse;border: 1px solid black;">From PI line Item</td>
-    </tr>
+ ##tBody##
     </tbody>
 </table>
 
